# ftradingflow

./: .gitignore  TRADEFLOW_FINAL_DUMP.sql  docker-compose.yml
.github/workflows/: desktop-build.yml
tradeflow-agent/: agent.js  package-lock.json  package.json
tradeflow-server/: Dockerfile  package-lock.json  package.json  tsconfig.json
tradeflow-server/prisma/: schema.prisma  seed.js  seed.ts  seed_direct.js
tradeflow-server/scripts/: agent_mock.js
tradeflow-server/src/: index.ts
tradeflow-server/src/config/: passport.ts
tradeflow-server/src/controllers/: adminController.ts  authController.ts  botNodeController.ts  layoutController.ts  nodeEnrollmentController.ts  storeController.ts
tradeflow-server/src/lib/: prisma.ts
tradeflow-server/src/middleware/: adminMiddleware.ts  authMiddleware.ts  nodeAuthMiddleware.ts
tradeflow-server/src/routes/: admin.ts  auth.ts  botNode.ts  layout.ts  nodeRoutes.ts  store.ts
tradeflow-web/: Dockerfile  db_schema.sql  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
tradeflow-web/src/: App.tsx  index.css
tradeflow-web/src-tauri/: Cargo.toml  fix_ico.py  fix_ico_premium.py  tauri.conf.json
tradeflow-web/src-tauri/capabilities/: default.json
tradeflow-web/src-tauri/src/: main.rs
tradeflow-web/src/hooks/: usePlatform.ts
tradeflow-web/src/lib/: api.ts  msalConfig.ts  strategies.data.ts
tradeflow-web/src/pages/: AIAnalytics.tsx  AdminDashboard.tsx  Analytics.tsx  AuthSuccess.tsx  Backtest.tsx  Checkout.tsx  ControlCenter.tsx  Dashboard.tsx  Exchanges.tsx  Login.tsx  (+9 more)
(+14 files in other folders)
