[package]
name = "tradeflow"
version = "1.0.0"
description = "Premium Trading Ecosystem & Command Center"
authors = ["DeepMind Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30"
tokio = { version = "1", features = ["full"] }

[features]
# default enables all window apis
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
